Fixed overflowing text that I saw today

--- a/css/global.css
+++ b/css/global.css
@@ -656,7 +656,7 @@ img {
 
     .standardFont {
 
-        font-size: 150%;
+        font-size: 140%;
     }
 
     .programmerTyping {
@@ -710,7 +710,7 @@ img {
 
     .standardFont {
 
-        font-size: 120%;
+        font-size: 110%;
     }
 
     .programmerTyping {
